# a2native

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh.md
.github/workflows/: ci.yml  publish.yml  release.yml  test-runner.yml
npm/a2native/: package.json
npm/a2native-darwin-arm64/: package.json
npm/a2native-darwin-x64/: package.json
npm/a2native-linux-x64/: package.json
npm/a2native-win32-x64/: package.json
schema/: a2native-v0.1.schema.json  a2ui-v0.1.schema.json
src/: main.rs  server.rs  session.rs
src/protocol/: a2ui.rs  agui.rs  mod.rs
src/renderer/: mod.rs
src/renderer/egui_impl/: components.rs  mod.rs
