[package]
name = "a2native"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Native desktop UI renderer for AI agents — one JSON in, one native window, one JSON out"
homepage = "https://a2native.github.io"
repository = "https://github.com/a2native/a2native"
documentation = "https://github.com/a2native/a2native#readme"
keywords = ["ai", "agent", "ui", "egui", "form"]
categories = ["gui", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "a2n"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
clap = { version = "4", features = ["derive"] }
sys-locale = "0.3"
tungstenite = { version = "0.20", default-features = false, features = ["handshake"] }
regex = { version = "1", default-features = false, features = ["std", "unicode"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
